--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ chardet==3.0.4
 click==6.7
 cookiecutter==1.6.0
 decorator==4.2.1
-Django==2.0.2
+Django>=2.0.8
 django-debug-toolbar==1.9.1
 django-extensions==1.9.9
 future==0.16.0
